extends Node2D

var dialoguediscoria = ["HEY THERE, CAT! YOU LOOKIN' FOR A ♪GOOD TIME, BABY? WELL, YOU'VE FOUND THE RIGHT GROOVE, SUGAR! I'M DISCOIRA♪, AND I'M HERE TO GET YOU MOVIN' AND GROOVIN' LIKE IT'S 1975, YEAH!",

						"STAYIN' ALIVE, STAYIN' ALIVE BUT LET ME TELL YA, THESE DISCO BALLS AND PLATFORM SHOES AREN'T JUST FOR SHOW! THEY'RE ALL ABOUT THE EXPERIENCE, BABY! YOU GOTTA FEEL THE RHYTHM AND LET IT TAKE YOU AWAY!",

						"AND IF YOU'RE FEELIN' DOWN, JUST LET THE MUSIC LIFT YOU UP! BECAUSE IN THE WORLD OF DISCOIRA, EVERYBODY'S A STAR! SO COME ON, LET'S DANCE AND FORGET OUR TROUBLES !",

						 "THERE’S SOMETHING THAT KEEPS YOU COMING BACK! \n PERMITTED TO THE PURSUIT OF PLEASURE!",
						
						"YOU SHOULD BE DANCING, YEAH BUT WATCH OUT, CAT! THEY'RE ALL OUT TO GET YOU! YOU THINK YOU KNOW ME? YOU THINK YOU CAN HANDLE THE HEAT? WELL, LET ME TELL YOU, CAT, YOU AIN'T SEEN NOTHIN' YET!",

						"BECAUSE IN THE WORLD OF ♪DISCOIRA♪, EVERYTHING IS ♪UPSIDE DOWN♪ AND ♪INSIDE OUT♪! YOU THINK YOU CAN ♪KEEP UP♪ WITH THE ♪BEAT OF MY HEART♪? LET ME TELL YOU, ♪CAT♪, YOU'RE IN FOR A ♪WILD RIDE♪!",

						"I WILL SURVIVE, OH, AS LONG AS I KNOW HOW TO LOVE♪ SO COME ON, ♪CAT♪, LET'S ♪DANCE THE NIGHT AWAY♪ AND ♪MAKE SOME MEMORIES♪! BECAUSE IN THE WORLD OF ♪DISCOIRA♪, EVERYTHING IS ♪POSSIBLE♪! AND EVERYTHING IS ♪UNPREDICTABLE♪!",

						"YOU THINK YOU CAN ♪HANDLE THE TRUTH♪? YOU THINK YOU CAN ♪FACE THE MUSIC♪? WELL, LET ME TELL YOU, ♪CAT♪, YOU'RE IN FOR A ♪SURPRISE♪! BECAUSE IN THE WORLD OF ♪DISCOIRA♪, EVERYTHING IS ♪A DANCE♪ AND EVERYTHING IS ♪A GAME♪!",

						"AND REMEMBER, ♪CAT♪, ♪ONCE YOU STEP INTO THE LIGHT, THERE'S NO GOING BACK♪! SO LET'S ♪KEEP THE PARTY GOING♪ AND ♪MAKE SOME MEMORIES♪! BECAUSE IN THE WORLD OF ♪DISCOIRA♪, EVERY NIGHT IS A ♪NIGHT TO REMEMBER♪!",

						"AND WHO KNOWS, MAYBE WE'LL EVEN ♪FIND SOME TREASURE♪ ALONG THE WAY♪! BUT FIRST, YOU GOTTA ♪FEEL THE BEAT♪ AND LET IT ♪TAKE YOU AWAY♪!",

						"SO WHAT DO YOU SAY, ♪CAT♪? YOU READY TO ♪JOIN THE PARTY♪ AND ♪MAKE SOME MEMORIES♪? BECAUSE IN THE WORLD OF ♪DISCOIRA♪, EVERY NIGHT IS A ♪NIGHT TO REMEMBER♪! AND EVERY MOMENT IS A ♪MOMENT TO SAVOR♪!",

						"AND LET'S NOT FORGET THE ♪GREEN AND GROWING♪, THE ♪PLANTS THAT NEED OUR LOVING♪! SO LET'S ♪DANCE AND PLANT♪, AND ♪MAKE THE WORLD A BETTER PLACE♪! BECAUSE IN THE WORLD OF ♪DISCOIRA♪, WE CAN ♪MAKE A DIFFERENCE♪, AND ♪KEEP OUR MOTHER EARTH IN BALANCE♪! SO LET'S ♪BOOGIE DOWN♪ AND ♪SAVE THE GREEN♪, WITH ♪DISCOIRA♪, THE ♪ENVIRONMENTAL QUEEN♪!"]

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
	
func skibidi(): 
	var random = RandomNumberGenerator.new()
	random.randomize()
	return random.randi_range(0, 3)


func _on_area_2d_area_entered(area):
	if $hidingspot == null:
		$AnimatedSprite2D.visible = true
		var a : int
		a = skibidi()
		$AnimatedSprite2D.play("textbox")
		$AnimatedSprite2D/Label.set_text(dialoguediscoria[a])

func _on_area_2d_area_exited(area):
	$AnimatedSprite2D.visible = false
	$AnimatedSprite2D.play("stop")


func _on_hidingspot(area):
	if area != $Area2D:
		print("gandon")
		$aa.visible = true
		$Area2D.visible = true
		$aa.play("rave")
		$hidingspot.queue_free()
	
